<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Social App Paul</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Abierto</string>
    <string name="navigation_drawer_close">cerrado</string>
    <string name="hello_blank_fragment">hello</string>
    <string name="titulo">Titulo</string>
    <string name="descripcion">Descripción</string>
    <string name="contenido">Contenido</string>
    <string name="anadir">Añadir</string>
    <string name="editar">Editar</string>
    <string name="guardarCambios">Guardar cambios</string>
    <string name="volver">Volver</string>
    <string name="eliminar">Eliminar</string>

</resources>
